--- a/hopital-web-angular/src/main/webapp/connexion.html
+++ b/hopital-web-angular/src/main/webapp/connexion.html
@@ -1,12 +1,33 @@
-<!DOCTYPE html>
-<html>
-<head>
+<meta charset="UTF-8">
+<div class="panel panel-default" style="margin-top: 20px"
+	ng-show="connexionCtrl.eleve">
+	<div class="panel-heading">Connexion !</div>
+	<div class="panel-body">
+		<form name="connexionCtrl.connexionForm"
+			ng-submit="connexionCtrl.connexionForm.$valid && connexionCtrl.connect()"
+			novalidate>
 
-<title>Hopital</title>
-</head>
-<body>
+			<div class="form-group">
+				<label for="electrique">Electrique</label> <input type="radio"
+					class="form-control" style="width: 400px"
+					ng-model="ressourceCtrl.ressource.electrique" value="true" />Oui&nbsp;
+				<input type="radio" class="form-control" style="width: 400px"
+					ng-model="ressourceCtrl.ressource.electrique" value="false" />Non
+			</div>
 
-
-
-</body>
-</html>
+			<div class="form-group">
+				<label for="nom">Login</label> <input type="text"
+					class="form-control" style="width: 400px"
+					ng-model="connexionCtrl.eleve.nom" required />
+			</div>
+			<div class="form-group">
+				<label for="prenom">Mot De Passe</label> <input type="password"
+					class="form-control" style="width: 400px"
+					ng-model="connexionCtrl.eleve.prenom" required />
+			</div>
+			<button class="btn btn-success" type="submit">
+				<span class="glyphicon glyphicon-ok"></span>
+			</button>
+		</form>
+	</div>
+</div>
