--- a/hopital-web-angular/src/main/webapp/connexion.html
+++ b/hopital-web-angular/src/main/webapp/connexion.html
@@ -16,12 +16,12 @@
 			<div class="form-group">
 				<label for="login">Login</label> <input type="text"
 					class="form-control" style="width: 400px"
-					ng-model="connexionCtrl.eleve.nom" required />
+					ng-model="connexionCtrl" required />
 			</div>
 			<div class="form-group">
 				<label for="mdp">Mot De Passe</label> <input type="password"
 					class="form-control" style="width: 400px"
-					ng-model="connexionCtrl.eleve.prenom" required />
+					ng-model="connexionCtrl" required />
 			</div>
 			<button class="btn btn-success" type="submit">
 				<span class="glyphicon glyphicon-ok"></span>
