--- a/hopital-web-angular/src/main/webapp/mir.html
+++ b/hopital-web-angular/src/main/webapp/mir.html
@@ -1,6 +1,5 @@
 <meta charset="UTF-8">
-<div class="panel panel-default" style="margin-top: 20px"
-	ng-show="connexionCtrl.eleve">
+<div class="panel panel-default" style="margin-top: 20px">
 	<div class="panel-heading">Connexion !</div>
 	<div class="panel-body">
 		<form name="connexionCtrl.connexionForm"
