--- a/hopital-web-angular/src/main/webapp/secretaireConsultation.html
+++ b/hopital-web-angular/src/main/webapp/secretaireConsultation.html
@@ -1,5 +1,23 @@
 <meta charset="UTF-8">
-<div>
+<div>	
+	<div class="panel panel-default">
+		<div class="panel-body">
+				<div class="form-group">
+					<label for="nom">Nom</label> <input type="text"
+						class="form-control" style="width: 400px"
+						ng-model="consultationCtrl.consultation.nom" required />
+				</div>
+				<div class="form-group">
+					<label for="prenom">Prenom</label> <input type="text"
+						class="form-control" style="width: 400px"
+						ng-model="consultationCtrl.consultation.prenom" required />
+				</div>
+				<button class="btn btn-success" type="submit">
+					<span class="glyphicon glyphicon-ok"></span>
+				</button>
+		</div>
+	</div>
+
 	<table class="table">
 		<tr>
 			<th>Identifiant</th>
