--- a/hopital-web-angular/src/main/webapp/mir.html
+++ b/hopital-web-angular/src/main/webapp/mir.html
@@ -18,7 +18,7 @@
 					ng-model="connexionCtrl" required />
 			</div>
 			<div class="form-group">
-				<label for="mdp">Mot De Passe</label> <input type="password"
+				<label for="password">Mot De Passe</label> <input type="password"
 					class="form-control" style="width: 400px"
 					ng-model="connexionCtrl" required />
 			</div>
