--- a/hopital-web-angular/src/main/webapp/adminIndex.html
+++ b/hopital-web-angular/src/main/webapp/adminIndex.html
@@ -8,7 +8,10 @@
 <script type="text/javascript" src="lib/bootstrap.min.js"></script>
 <script type="text/javascript" src="lib/angular.min.js"></script>
 <script type="text/javascript" src="js/app.js"></script>
-
+<script type="text/javascript" src="js/adminConsultation.js"></script>
+<script type="text/javascript" src="js/adminSalle.js"></script>
+<script type="text/javascript" src="js/connect.js"></script>
+<script type="text/javascript" src="js/patient.js"></script>
 
 <title>Hopital</title>
 </head>
