--- a/hopital-web-angular/src/main/webapp/medecinIndex.html
+++ b/hopital-web-angular/src/main/webapp/medecinIndex.html
@@ -8,7 +8,8 @@
 <script type="text/javascript" src="lib/bootstrap.min.js"></script>
 <script type="text/javascript" src="lib/angular.min.js"></script>
 <script type="text/javascript" src="js/app.js"></script>
-
+<script type="text/javascript" src="js/connect.js"></script>
+<script type="text/javascript" src="js/medecinConsultation.js"></script>
 
 <title>Hopital</title>
 </head>
