--- a/hopital-web-angular/src/main/webapp/secretaireDisponibilite.html
+++ b/hopital-web-angular/src/main/webapp/secretaireDisponibilite.html
@@ -16,7 +16,7 @@
 					<label for="type">Medecin</label> 
 					<select class="form-control" style="width: 400px" ng-readonly="!secretaireDisponibiliteCtrl.ajout"
 						ng-model="secretaireDisponibiliteCtrl.idmedecin" required>
-						<option ng-repeat="medecin in secretaireDisponibiliteCtrl.listMedecins" value="{{medecin}}">{{medecin}}</option>	
+						<option ng-repeat="medecin in secretaireDisponibiliteCtrl.listMedecins" value="{{idmedecin}}">{{idmedecin}}</option>	
 					</select>
 				</div>
 				<div class="form-group">
