--- a/hopital-web-angular/src/main/webapp/adminConsultation.html
+++ b/hopital-web-angular/src/main/webapp/adminConsultation.html
@@ -2,6 +2,8 @@
 <div>	
 	<div class="panel panel-default">
 		<div class="panel-body">
+		<form name="consultationCtrl.consultationForm"
+				ng-submit="consultationCtrl.consultationForm.$valid && consultationCtrl.listNomPrenom(consultationCtrl.consultation.nom,consultationCtrl.consultation.prenom)" novalidate>
 				<div class="form-group">
 					<label for="nom">Nom</label> <input type="text"
 						class="form-control" style="width: 400px"
@@ -15,6 +17,7 @@
 				<button class="btn btn-success" type="submit">
 					<span class="glyphicon glyphicon-ok"></span>
 				</button>
+			</form>
 		</div>
 	</div>
 
