supr secrre&medecin index

--- a/hopital-web-angular/src/main/webapp/index.html
+++ b/hopital-web-angular/src/main/webapp/index.html
@@ -12,11 +12,14 @@
 <script type="text/javascript" src="js/adminSalle.js"></script>
 <script type="text/javascript" src="js/connect.js"></script>
 <script type="text/javascript" src="js/patient.js"></script>
+<script type="text/javascript" src="js/medecinConsultation.js"></script>
+<script type="text/javascript" src="js/secretaireConsultation.js"></script>
+<script type="text/javascript" src="js/patient.js"></script>
 
 <title>Hopital</title>
 </head>
 <body>
-
+<p>accueil index</p>
 <connexion ng-show=""></connexion>
 
 </body>
