--- a/hopital-web-angular/src/main/webapp/index.html
+++ b/hopital-web-angular/src/main/webapp/index.html
@@ -19,8 +19,8 @@
 <title>Hopital</title>
 </head>
 <body>
-<p>accueil index</p>
-<connexion ng-show=""></connexion>
+
+<connexion></connexion>
 
 </body>
 </html>
