--- a/hopital-web-angular/src/main/webapp/salle.html
+++ b/hopital-web-angular/src/main/webapp/salle.html
@@ -47,7 +47,7 @@
 				
 				<div class="form-group">
 					<label for="specialite">Spécialités</label> 
-					<select cmultiple lass="form-control" style="width: 400px" ng-model="salleCtrl.salle.salleSpecialites.id" ng-options="salleSpecialites.id as salleSpecialites.id.specialite.intitule for salleSpecialites in salleCtrl.salleSpecialites">
+					<select multiple class="form-control" style="width: 400px" ng-model="salleCtrl.salle.salleSpecialites.id" ng-options="salleSpecialites.id as salleSpecialites.id.specialite.intitule for salleSpecialites in salleCtrl.salleSpecialites">
 					</select>
 				</div>
 				
