--- a/hopital-web-angular/src/main/webapp/mir.html
+++ b/hopital-web-angular/src/main/webapp/mir.html
@@ -5,14 +5,14 @@
 		<form name="connexionCtrl.connexionForm"
 			ng-submit="connexionCtrl.connexionForm.$valid && connexionCtrl.connect()" novalidate>
 			<div class="form-group">
-				<label for="login">Login</label> <input type="text"
-					class="form-control" style="width: 400px"
-					ng-model="connexionCtrl" required />
+				<label for="login">Login</label> <input type="text" placeholder="Login"
+					class="form-control" style="width: 300px"
+					ng-model="connexionCtrl.login" required />
 			</div>
 			<div class="form-group">
-				<label for="password">Mot De Passe</label> <input type="password"
-					class="form-control" style="width: 400px"
-					ng-model="connexionCtrl" required />
+				<label for="password">Mot De Passe</label> <input type="password" placeholder="Password"
+					class="form-control" style="width: 300px"
+					ng-model="connexionCtrl.password" required />
 			</div>
 			<button class="btn btn-success" type="submit">
 				<span class="glyphicon glyphicon-ok"></span>
