--- a/hopital-web-angular/src/main/webapp/mir.html
+++ b/hopital-web-angular/src/main/webapp/mir.html
@@ -3,16 +3,24 @@
 	<div class="panel-heading">Connexion !</div>
 	<div class="panel-body">
 		<form name="connexionCtrl.connexionForm"
-			ng-submit="connexionCtrl.connexionForm.$valid && connexionCtrl.connect()" novalidate>
+			ng-submit="connexionCtrl.connexionForm.$valid && connexionCtrl.connect()"
+			novalidate>
+
 			<div class="form-group">
-				<label for="login">Login</label> <input type="text" placeholder="Login"
-					class="form-control" style="width: 300px"
-					ng-model="connexionCtrl.login" required />
+				<label for="electrique">Session</label>
+				 <input type="radio" class="form-control" style="width: 400px" ng-model="connexionCtrl" value="ADMIN" />ADMIN
+				 <input type="radio" class="form-control" style="width: 400px" ng-model="connexionCtrl" value="SECRETAIRE" />SECRETAIRE
+				 <input type="radio" class="form-control" style="width: 400px" ng-model="connexionCtrl" value="MEDECIN" />MEDECIN
 			</div>
 			<div class="form-group">
-				<label for="password">Mot De Passe</label> <input type="password" placeholder="Password"
-					class="form-control" style="width: 300px"
-					ng-model="connexionCtrl.password" required />
+				<label for="login">Login</label> <input type="text"
+					class="form-control" style="width: 400px"
+					ng-model="connexionCtrl" required />
+			</div>
+			<div class="form-group">
+				<label for="mdp">Mot De Passe</label> <input type="password"
+					class="form-control" style="width: 400px"
+					ng-model="connexionCtrl" required />
 			</div>
 			<button class="btn btn-success" type="submit">
 				<span class="glyphicon glyphicon-ok"></span>
